--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -16,7 +16,7 @@ body {
 }
 
 .bmd-layout-content {
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .nav-tabs .nav-link, .nav-tabs .nav-link.active {
@@ -34,4 +34,21 @@ body {
 
 .form-control, .material-icons {
     display: inline;
+}
+
+.card-img-top {
+    max-height: 20vh;
+}
+
+.set-card {
+    height: 30vh;
+    margin-bottom: 1rem;
+}
+
+.card-body {
+    display: flex;
+}
+
+.card-title {
+    margin-top: auto;
 }
