--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -51,12 +51,14 @@ body {
 
 .card-title {
     margin-top: auto;
+    font-size: 1.5rem;
+    font-weight: 300;
 }
 
 @media (max-width: 992px) {
     .set-card {
-            max-width: 200px;
-    margin-left: auto;
-    margin-right: auto;
+        max-width: 200px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
